Adding a spark unit test