@@ -63,6 +63,7 @@ sparkVariants {
                 exclude group: 'javax.servlet'
                 exclude group: 'org.apache.hadoop'
             }
+            testImplementation("org.mockito:mockito-core:3.12.4")
 
             add(variant.configuration('itest', 'implementation'), project(":test:shared"))
 
@@ -141,6 +142,10 @@ configurations.matching{ it.name.contains('CompilerPlugin') == false }.all { Con
         }
     }
     conf.exclude group: "org.mortbay.jetty"
+}
+
+tasks.named("test").configure {
+    jvmArgs "--add-opens=java.base/java.io=ALL-UNNAMED" // Needed for IOUtils's BYTE_ARRAY_BUFFER reflection
 }
 
 // Set minimum compatibility and java home for compiler task
